# pipeline_dados_Iot_docker

./: Dockerfile  README.md  docker-compose.yml  insercao.py  main.py  pyproject.toml  vIews.py
